fixes default cursor hover for trs adds spacing next to checkbox labels if they are pairs

--- a/patterns/components/tables/all-tables.scss
+++ b/patterns/components/tables/all-tables.scss
@@ -107,12 +107,15 @@ th {
 }
 
 tr {
-    cursor: pointer;
     transition: background-color $fast-ease;
     &:hover,
     &.\--is-active {
         background-color: $table-item-background-hover;
     }
+}
+
+.is--clickable {
+    cursor: pointer;
 }
 
 .table--select-count--container {
